--- a/views/add.ejs
+++ b/views/add.ejs
@@ -36,27 +36,20 @@
                         </div>
                         <div class="mx-auto pb-3 tm-about-text-container">
                             <div class="row">
-                                <div class="col-lg-6 mb-5">
-                                    <form id="contact-form" action="" method="POST" class="tm-contact-form">
+                                <div class="col-lg-12 mb-5">
+                                    <form id="contact-form" action="/photos" method="POST" class="tm-contact-form">
                                         <div class="form-group">
                                             <input type="text" name="name" class="form-control rounded-0"
-                                                placeholder="Name" required="" />
+                                                placeholder="Photo Title" required>
                                         </div>
+
                                         <div class="form-group">
-                                            <input type="email" name="email" class="form-control rounded-0"
-                                                placeholder="Email" required="" />
+                                            <textarea rows="8" name="description" class="form-control rounded-0"
+                                                placeholder="Photo description" required></textarea>
                                         </div>
+
                                         <div class="form-group">
-                                            <select class="form-control" id="contact-select" name="inquiry">
-                                                <option value="-">Subject</option>
-                                                <option value="sales">Sales &amp; Marketing</option>
-                                                <option value="creative">Creative Design</option>
-                                                <option value="uiux">UI / UX</option>
-                                            </select>
-                                        </div>
-                                        <div class="form-group">
-                                            <textarea rows="8" name="message" class="form-control rounded-0"
-                                                placeholder="Message" required=""></textarea>
+                                            <input type="file" name="image" class="form-control-file rounded-0" >
                                         </div>
 
                                         <div class="form-group mb-0">
@@ -65,16 +58,6 @@
                                         </div>
                                     </form>
                                 </div>
-                                <div class="col-lg-6">
-                                    <div class="mapouter mb-60">
-                                        <div class="gmap_canvas">
-                                            <iframe width="100%" height="520" id="gmap_canvas"
-                                                src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                                                frameborder="0" scrolling="no" marginheight="0"
-                                                marginwidth="0"></iframe>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -82,7 +65,7 @@
                     <div class="parallax-window parallax-window-2" data-parallax="scroll"
                         data-image-src="img/contact-2.jpg"></div>
 
-                    
+
                 </div>
             </main>
 
